# stm32f072BDISCO

./: CMakeLists.txt  README.md
Libraries/: CMakeLists.txt
inc/: bsp.h  button.h  can.h  command.h  common.h  crc.h  flash.h  gpio.h  led.h  protocol.h  spi.h  timer.h  usart.h
src/: bsp.c  button.c  can.c  crc.c  flash.c  led.c  main.c  protocol.c  spi.c  timer.c  usart.c
